# flock

./: .env.docker  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_cn.md  README_ja.md  conf.yaml  docker-compose.yml
crates/flock-agent/: Cargo.toml
crates/flock-agent/src/: agent_setup.rs  agent_setup_helpers.rs  agents_md.rs  approval.rs  cache_diagnostics.rs  context.rs  engine.rs  http_recording.rs  lib.rs  memory.rs  plan.rs  session.rs  sinks.rs  spawner.rs  tool_executor.rs
crates/flock-agent/src/context_compression/: auto.rs  emergency.rs  estimate.rs  micro.rs  prompt.rs  state.rs
crates/flock-agent/src/engine/: init.rs  mod.rs  run.rs  summary.rs
crates/flock-agent/src/engine/run/: hooks.rs  loop_run.rs  middleware.rs  mod.rs  run.rs  session.rs
crates/flock-agent/src/graph/: builder.rs  mod.rs  nodes.rs  state.rs  tool_node.rs
crates/flock-agent/src/graph/nodes/: compaction.rs  helpers.rs  llm.rs  message_convert.rs  mod.rs  routes.rs  types.rs
crates/flock-agent/src/graph/tool_node/: extract.rs  mod.rs  runnable.rs
crates/flock-agent/src/memory/: error.rs  index.rs  paths.rs  prompt.rs  store.rs  types.rs
crates/flock-agent/src/memory/store/: delete.rs  mod.rs  read.rs  scan.rs  write.rs
crates/flock-agent/src/output/: null_sink.rs  protocol_sink.rs
crates/flock-agent/src/session_host/: actor.rs  commands.rs  lifecycle.rs  mod.rs  state.rs
crates/flock-agent/src/sinks/: mod.rs  null_sink.rs
crates/flock-agent/src/tool_executor/: approval.rs  executor.rs  helpers.rs  mod.rs  types.rs
crates/flock-agent/src/tools/: mod.rs  plan.rs  skill.rs  spawn.rs
crates/flock-agent/src/tools/plan/: file.rs  mod.rs  prompt.rs  state.rs
crates/flock-agent/src/workflow_graph/: builder.rs  mod.rs  state.rs  variables.rs
crates/flock-agent/src/workflow_graph/nodes/: agent.rs  answer.rs  classifier.rs  code.rs  common.rs  human.rs  ifelse.rs  llm.rs  parameter_extractor.rs  plugin.rs  start.rs
crates/flock-agent/tests/: concurrency_and_mock_tests.rs  tool_approval_tests.rs  workflow_tests.rs
crates/flock-core/: Cargo.toml
crates/flock-core/src/: config.rs  crypto.rs  db.rs  ipc_interface.rs  lib.rs  model_factory.rs  types.rs
crates/flock-core/src/config/: auth.rs  compat.rs  compression.rs  db_path.rs  debug.rs  file_cache.rs  hooks.rs  plan.rs  settings.rs  shell.rs
crates/flock-core/src/config/settings/: cli.rs  mod.rs  resolver.rs  types.rs
crates/flock-core/src/context_compression/: fold.rs  json.rs  level.rs  mod.rs  sanitize.rs  toon.rs
crates/flock-core/src/db/: app_config.rs  assistants.rs  assistants_seed.rs  conversations.rs  cron.rs  cron_seed.rs  mcpserver.rs  message_parser.rs  migrations.rs  mod.rs  modelprovider_seed.rs  modelproviders.rs  models.rs  sessions.rs  toolproviders.rs  workflow.rs  workflow_seed.rs
crates/flock-core/src/ipc_interface/: approval.rs  commands.rs  events.rs  reader.rs  writer.rs
crates/flock-core/src/types/: compact.rs  llm.rs  message.rs  skill_types.rs  spawner.rs  tool.rs
crates/flock-skills/: Cargo.toml
crates/flock-skills/src/: bundled.rs  conditional.rs  context_modifier.rs  discovery.rs  executor.rs  frontmatter.rs  hooks.rs  lib.rs  loader.rs  mcp.rs  paths.rs  permissions.rs  prompt.rs  shell.rs  substitution.rs  types.rs  watcher.rs
crates/flock-skills/src/bundled/: hello.rs  manager.rs
crates/flock-skills/src/frontmatter/: coercion.rs  mod.rs  parser.rs
crates/flock-skills/src/loader/: core.rs  fs.rs  mod.rs  types.rs  utils.rs
crates/flock-tools/: Cargo.toml
crates/flock-tools/src/: adapter.rs  approval.rs  builtin.rs  daytona.rs  daytona_provider.rs  e2b_provider.rs  file_cache.rs  lib.rs  local_provider.rs  mcp.rs  registry.rs  sandbox_manager.rs  sandbox_provider.rs
crates/flock-tools/src/baidu/: mod.rs  provider.yaml
crates/flock-tools/src/builtin/: browser.rs  code_execution.rs  computer_use.rs  glob.rs  grep.rs  mod.rs  provider.yaml  write.rs
crates/flock-tools/src/daytona/: config.rs  e2b.rs  exec.rs  fs.rs  lifecycle.rs  mod.rs  provider.rs  snapshot.rs  state.rs  sync.rs  vnc.rs  volume.rs
crates/flock-tools/src/e2b/: exec.rs  mod.rs  provider.rs
crates/flock-tools/src/google/: mod.rs  provider.yaml
crates/flock-tools/src/math/: mod.rs  provider.yaml
crates/flock-tools/src/mcp/: manager.rs  mcp_config.rs  protocol.rs  tool_proxy.rs  transport.rs
crates/flock-tools/src/openweather/: mod.rs  provider.yaml
crates/flock-tools/src/sandbox/: browser.rs  code_execution.rs  computer_use.rs  fs_tools.rs  mod.rs  provider.yaml  request_human_assistance.rs  sandbox_exec.rs
crates/flock-tools/src/sandbox_core/: config.rs  local_provider.rs  manager.rs  mod.rs  provider.rs  state.rs  sync.rs  vnc_helper.rs
crates/flock-tools/src/serper/: mod.rs  provider.yaml
crates/flock-tools/src/tool_executor/: approval.rs  executor.rs  helpers.rs  image_extract.rs
crates/flock-tools/src/tools/: mod.rs
crates/flock-tools/src/tools/baidu/: mod.rs
crates/flock-tools/tests/: diagnose_e2b.rs  diagnose_sandbox.rs
crates/flock-workflow/: Cargo.toml
crates/flock-workflow/src/: builder.rs  lib.rs  state.rs  variables.rs
crates/flock-workflow/src/nodes/: agent.rs  classifier.rs  code.rs  common.rs  human.rs  ifelse.rs  llm.rs  mod.rs  parameter_extractor.rs  plugin.rs
flock-ui/src-tauri/: Cargo.toml  tauri.conf.json
flock-ui/src-tauri/capabilities/: default.json
flock-ui/src-tauri/icons/: icon.icns
flock-ui/src-tauri/src/: agent.rs  commands.rs  cron_scheduler.rs  lib.rs
flock-ui/src-tauri/src/agent/: actor.rs  commands.rs  emitter.rs  lifecycle.rs  mod.rs  state.rs
flock-ui/src-tauri/src/assistant/: actor.rs  commands.rs  lifecycle.rs  mod.rs
flock-ui/src-tauri/src/commands/: agent.rs  assistant.rs  conversation.rs  cron.rs  file.rs  mod.rs  models.rs  settings.rs  shared.rs  skills.rs  workflow.rs  workspace.rs
flock-ui/src-tauri/src/cron_scheduler/: cron_parser.rs  executor.rs  mod.rs
flock-ui/src-tauri/src/ipc/: emitter.rs
flock-ui/src-tauri/src/pet/: mod.rs
flock-ui/src-tauri/src/workspace/: mod.rs
(+875 files in other folders)
