[lints]
workspace = true

[package]
name = "flock-agent"
description = "Agent engine, session management, output sinks, and orchestration for flock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true



[dependencies]
flock-core.workspace      = true
flock-tools.workspace     = true
flock-skills.workspace    = true

tokio.workspace       = true
tokio-stream.workspace = true
futures.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
serde_yaml.workspace  = true
async-trait.workspace = true
anyhow.workspace      = true
thiserror.workspace   = true
glob.workspace        = true
chrono.workspace      = true
dirs.workspace        = true
crossterm.workspace   = true
is-terminal.workspace = true
log.workspace         = true

# LangGraph graph runtime
langgraph.workspace                   = true
langgraph-derive.workspace            = true
langgraph-checkpoint.workspace        = true
langgraph-checkpoint-sqlite.workspace = true
langgraph-prebuilt.workspace          = true
langgraph-providers.workspace         = true

uuid.workspace           = true
sqlx.workspace           = true

workspace-hack.workspace = true

[dev-dependencies]
flock-tools = { path = "../flock-tools", features = ["test-utils"] }
wiremock.workspace    = true
tokio-test.workspace  = true
tempfile.workspace    = true
mockall.workspace     = true
rstest.workspace      = true
serial_test.workspace = true

