[package]
name = "flock-core"
description = "Core fundamental types, protocols, configurations, and utilities for flock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Dependencies from merged crates
langgraph-prebuilt.workspace = true
langgraph-providers.workspace = true
serde.workspace      = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace     = true
tokio.workspace      = true
regex.workspace      = true
toml.workspace       = true
anyhow.workspace     = true
thiserror.workspace  = true
dirs.workspace       = true
reqwest.workspace    = true
glob.workspace       = true

# Database & crypto
sqlx.workspace   = true
ring.workspace   = true
base64.workspace = true
serde_yaml.workspace = true
uuid.workspace   = true
log.workspace    = true

# Windows registry access for MachineGuid
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Unix-specific dependencies for machine identifier
[target.'cfg(unix)'.dependencies]
hostname.workspace = true
libc.workspace = true

workspace-hack.workspace = true

[dev-dependencies]
rstest.workspace   = true
wiremock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
