[lints]
workspace = true

[package]
name = "flock-tools"
description = "Built-in agent tools for flock (Read, Write, Edit, Bash, Grep, Glob, Spawn)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flock-core.workspace     = true

langgraph-prebuilt = { path = "../../../langgraph-rust/crates/langgraph-prebuilt" }
langgraph-derive = { path = "../../../langgraph-rust/crates/langgraph-derive" }
langgraph-checkpoint = { path = "../../../langgraph-rust/crates/langgraph-checkpoint" }

tokio.workspace       = true
futures.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
async-trait.workspace = true
anyhow.workspace      = true
thiserror.workspace   = true
reqwest.workspace     = true
glob.workspace        = true
lru.workspace         = true
meval.workspace       = true

workspace-hack.workspace = true


[dev-dependencies]
tempfile.workspace = true

[features]
test-utils = []
